# hyperion_platform

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  def.html  genindex.html  index.html  objects.inv  platform.html  quick_start.html  search.html  searchindex.js  sitemap.xml  types.html  utility.html  xmake.lua
.github/workflows/: check_versioning_label.yml  cmake.yml  docs.yml  setup.yml  update_versioning.yml  xmake.yml
_sources/: def.rst.txt  index.rst.txt  platform.rst.txt  quick_start.rst.txt
cmake/: hyperion_compiler_settings.cmake  hyperion_enable_warnings.cmake
docs/: Doxyfile  conf.py  index.rst  platform.rst  quick_start.rst  types.rst  utility.rst
include/hyperion/: platform.h
include/hyperion/platform/: compare.h  def.h  ignore.h  testing.h  types.h
src/: main.cpp  test_main.cpp
src/test/: compare.cpp  compare.h
xmake/: hyperion_compiler_settings.lua
